--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function login(loginForm)
 	{
 		document.write('<html><body><center><h1>')
 		document.write('<img src="https://cdn.dribbble.com/users/2469324/screenshots/6538803/comp_3.gif" >');
-		document.write('Sorry You are not Registered for this Program ');
+		document.write('<br />Sorry You are not Registered for this Program ');
 		document.write('</h1></center></body></html>')
 	}
 }
