--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Noor</title>
+<title>Alumini Interaction</title>
 <style>
 #div1
 {width:500px;
@@ -62,7 +62,7 @@ function login(loginForm)
 	{
 		document.write('<html><body><center><h1>')
 		document.write('<img src="https://cdn.dribbble.com/users/2469324/screenshots/6538803/comp_3.gif" >');
-		document.write('Sorry You are not Registered for this Program ');
+		document.write('<br />Sorry You are not Registered for this Program ');
 		document.write('</h1></center></body></html>')
 	}
 }
